deploy/mainfeats/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banana-frontend
  template:
    metadata:
      labels:
        app: banana-frontend
    spec:
      containers:
        - name: banana-frontend
          image: php-banana
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
